Apple Event handling for use with Cocoa widgets. Patch by Stan Shebs. b=355352 r=josh moa=bsmedberg